[gd_scene load_steps=12 format=3 uid="uid://bcu48fu3o1erv"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_x6322"]
[ext_resource type="Texture2D" uid="uid://cel63e62477jm" path="res://art/worm/head1.png" id="2_umtqc"]
[ext_resource type="Script" path="res://Characters/segment_face.gd" id="3_5rki2"]
[ext_resource type="Script" path="res://Characters/player2.gd" id="3_kryqy"]
[ext_resource type="Texture2D" uid="uid://cj24i5tf1abpi" path="res://art/worm/middle1.png" id="4_by1dl"]
[ext_resource type="Texture2D" uid="uid://88w4l7sg1hon" path="res://art/worm/tail1.png" id="5_on5tw"]
[ext_resource type="Texture2D" uid="uid://7s0an7xun1ig" path="res://art/worm/apple1.png" id="7_7ejnd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5h2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h7puq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elgeh"]
size = Vector2(20, 20.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_nignx"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 7
script = ExtResource("1_x6322")

[node name="HeadSprite" type="Sprite2D" parent="."]
light_mask = 0
scale = Vector2(0.015, 0.015)
texture = ExtResource("2_umtqc")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1.25, 1.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_k5h2r")

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DisableSegmentTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05

[node name="ReenableSegmentTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="HeadCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h7puq")

[node name="Segment 1" type="DampedSpringJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("Segment 1 Col")
bias = 0.9
length = 25.0
stiffness = 64.0

[node name="Segment 1 Col" type="RigidBody2D" parent="Segment 1" node_paths=PackedStringArray("prev_segment")]
position = Vector2(0, 25)
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("3_5rki2")
prev_segment = NodePath("../../HeadCollision")

[node name="Sprite2D" type="Sprite2D" parent="Segment 1/Segment 1 Col"]
scale = Vector2(0.015, 0.015)
texture = ExtResource("4_by1dl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment 1/Segment 1 Col"]
shape = SubResource("RectangleShape2D_elgeh")

[node name="Segment 2" type="DampedSpringJoint2D" parent="."]
position = Vector2(0, 25)
node_a = NodePath("../Segment 1/Segment 1 Col")
node_b = NodePath("Segment 2 Col")
bias = 0.9
length = 25.0
stiffness = 64.0

[node name="Segment 2 Col" type="RigidBody2D" parent="Segment 2" node_paths=PackedStringArray("prev_segment")]
position = Vector2(0, 25)
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("3_5rki2")
prev_segment = NodePath("../../Segment 1/Segment 1 Col")

[node name="Sprite2D" type="Sprite2D" parent="Segment 2/Segment 2 Col"]
scale = Vector2(0.015, 0.015)
texture = ExtResource("4_by1dl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment 2/Segment 2 Col"]
shape = SubResource("RectangleShape2D_elgeh")

[node name="Segment 3" type="DampedSpringJoint2D" parent="."]
position = Vector2(0, 50)
node_a = NodePath("../Segment 2/Segment 2 Col")
node_b = NodePath("Segment 3 Col")
bias = 0.9
length = 25.0
stiffness = 64.0

[node name="Segment 3 Col" type="RigidBody2D" parent="Segment 3" node_paths=PackedStringArray("prev_segment")]
process_priority = -1
position = Vector2(0, 25)
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("3_5rki2")
prev_segment = NodePath("../../Segment 2/Segment 2 Col")

[node name="Sprite2D" type="Sprite2D" parent="Segment 3/Segment 3 Col"]
position = Vector2(0, 4.395)
scale = Vector2(0.015, 0.015)
texture = ExtResource("5_on5tw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment 3/Segment 3 Col"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_elgeh")

[node name="Segment 4" type="DampedSpringJoint2D" parent="."]
position = Vector2(0, 75)
node_a = NodePath("../Segment 3/Segment 3 Col")
node_b = NodePath("PlayerTail")
bias = 0.9
length = 25.0
stiffness = 64.0

[node name="PlayerTail" type="RigidBody2D" parent="Segment 4" groups=["tail"]]
position = Vector2(1, 26)
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
custom_integrator = true
continuous_cd = 1
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("3_kryqy")

[node name="Sprite2D" type="Sprite2D" parent="Segment 4/PlayerTail"]
scale = Vector2(0.015, 0.015)
texture = ExtResource("7_7ejnd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment 4/PlayerTail"]
shape = SubResource("CircleShape2D_nignx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DisableSegmentTimer" to="." method="_on_disable_segment_timer_timeout"]
[connection signal="timeout" from="ReenableSegmentTimer" to="." method="_on_reenable_segment_timer_timeout"]
